--- a/css/flexslider.css
+++ b/css/flexslider.css
@@ -39,7 +39,7 @@
 .flex-viewport{ overflow: visible!important;}
 .flexslider {margin: 0; padding: 0;}
 .flexslider .slides > li {display: none; -webkit-backface-visibility: hidden;} /* Hide the slides before the JS is loaded. Avoids image jumping */
-.flexslider .slides img {width: 100%; display: block; }
+.flexslider .slides img {display: inline-block; }
 .flex-pauseplay span {text-transform: capitalize;}
 
 /* Clearfix for the .slides element */
