--- a/css/custom.css
+++ b/css/custom.css
@@ -19,19 +19,50 @@ ul, li, ol, a{
   display: none;
 }
 ul, li, ol, p, h1, h2, h3, h4{ margin: 0px; padding: 0px;}
+.form-group{
+    margin-bottom: 10px;
+}
+.form-group label{
+    margin-bottom: 5px;
+    display: block;
+    margin-left: 2px;
+}
 .form-control{
-  border: 1px solid #969696;
+  border: 1px solid rgba(91,107,117,0.5);
   border-radius: 5px;
-  padding:10px 10px;
+  padding:8px 10px;
   -webkit-border-radius: 5px;
   -moz-border-radius: 5px;
   -o-border-radius: 5px;
-  background-color: #fff;
+  background-color:#fffefe;
   color: #333333;
   font-size: 14px;
   display: table;
   width: 100%;
-  height: 46px;
+  height: 44px;
+}
+.form-control:focus{
+    border: 1px solid rgba(91,107,117,1); 
+}
+.area-control{
+  border: 1px solid rgba(91,107,117,0.5);
+  border-radius: 5px;
+  padding:8px 10px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -o-border-radius: 5px;
+  background-color:#fffefe;
+  color: #333333;
+  font-size: 14px;
+  display: table;
+  width: 100%; 
+  min-height: 100px;
+}
+.area-control:focus{
+    border: 1px solid rgba(91,107,117,1); 
+}
+.red{
+    color: red;
 }
 /** Header Styles **/
 header{
@@ -60,7 +91,7 @@ header{
 .bannerInfo{
     position: absolute;
     top: 0px;
-    z-index: 99;
+    z-index: 9;
     left: 0px;
     width: 100%;
 }
@@ -83,6 +114,11 @@ header{
 }
 .bannerInfo .btn-action{
     margin-top: 20px;
+}
+.inner-banner{
+  text-align: center;
+  height: 300px;
+  overflow: hidden;
 }
 /** navication styles **/
 nav{
@@ -318,6 +354,73 @@ nav li ul.menu-hover a:hover{
 .why-choose-sec .box .btn-action a{
     text-decoration: none;
 }
+/** container section styles **/
+.containerSec{
+  padding: 30px 0px;
+}
+.containerSec h3{
+  font-weight: 600;
+  margin-bottom: 10px;
+  margin-top: 5px;
+}
+.containerSec p{
+  margin-bottom: 15px;
+  line-height: 20px;
+}
+.containerSec b{
+    color:#b74c60;
+    font-weight: normal;
+}
+.containerSec ul{
+    padding-left: 20px;
+}
+.containerSec ul li{
+    list-style-type: circle;
+    padding-left: 10px;
+}
+.right-col{
+  background: #f2f2f1;
+  border-left: 1px solid #e4e4e4;
+}
+.block{
+  padding: 10px 20px 10px 20px;
+  border-bottom: 1px solid #fff;
+}
+.block-title{
+  font-weight: 600;
+  text-transform: uppercase;
+  color: #b74c60;
+  margin-bottom: 10px;
+}
+.block-content{
+  margin-top: 15px;
+}
+.block-content ul li a{
+    text-decoration: none;
+    color:#5b6b75;
+}
+.block-content ul li a b{
+    color:#5b6b75;
+}
+.block-content p{
+  line-height: 20px;
+}
+.text-right{
+    text-align: right;
+}
+.address-line img{
+    float: left;
+    margin-right: 5px;
+    opacity: 0.8;
+}
+.address-line p:first-child img{
+    padding-bottom: 60px;
+}
+.google-map{
+    border:2px solid #ddd;
+}
+/**  tesimonial styles
+
 /** footer styles **/
 footer{
   background: #f2f2f1;
