--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -1,3 +1,81 @@
-@media only screen and (max-width:1578px) {
-
+@media only screen and (max-width:750px) {
+    .bannerInfo .inner h1{
+        font-size: 30px;
+    }
+}
+@media only screen and (max-width:1023px){
+    .flexslider-in{
+        overflow: hidden;
+        height: 450px;
+    }
+    .flexslider-in img{
+        max-width: none;
+    }
+}
+@media only screen and (max-width:1119px){
+    .bannerInfo .inner{
+        margin: 0px 10px;
+    }
+    .wrapper{
+        margin: 0px 15px;
+    }
+    header .wrapper{
+        margin: 0px;
+    }
+}
+@media only screen and (min-width:769px) and (max-width:992px) {
+    .our-services .in-sec{
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        padding-bottom: 30px;
+    }
+    .our-services .col-md-3:nth-child(3) .in-sec{
+        border-bottom: none;
+    }
+    .our-services .col-md-3:nth-child(4) .in-sec{
+        border-bottom: none;
+    }
+    .address{
+        border-right: none;
+        border-left: 1px solid #e9e9e9;
+        padding-left: 10px;
+    }
+}
+@media only screen and (max-width:992px) {
+    .why-choose-sec .box .img{
+        background: #000;
+        text-align: center;
+    }
+    nav ul li a{
+        padding: 30px 20px 25px 20px;
+    }
+}
+@media only screen and (max-width:768px) {
+    .our-services .in-sec{
+        border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+        padding-bottom: 30px;
+    }    
+    .our-services .col-md-3:last-child .in-sec{
+        border-bottom: none;
+    }
+    .welcome-sec .right-col{
+        width: 100%;
+        margin-bottom: 20px;
+    }
+    .welcome-sec .left-col{
+        width: 100%;
+        padding: 0px;
+        clear: both;
+    }
+    .address{
+        margin-bottom: 30px;
+        border:none;
+    }
+    .bottom-footer{
+        text-align: center;
+    }
+    .social-links{
+        float: none;
+        display: inline-block;
+        margin-top: 20px;
+    }
 }
